# Real-Estate-Market-Analysis-dashboard

./: .env.example  .gitignore  Project_Description.py  README.md  depr_requirements.txt  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
functions/: apartments.py  data_loading.py  houses.py  lands.py  main_page.py
pages/: 01_🏡_Houses.py  02_🌳_Lands.py  03_🏢_Apartments.py  page_apartments.py  page_houses.py  page_lands.py
src/: main.py
src/functions/: apartments.py  houses.py  lands.py  main_page.py
src/pages/: page_apartments.py  page_lands.py
